configuration initial steps, fix order of scoring buttons
